# openemr-ai-smart-on-fhir

./: .gitignore  README.md
.github/workflows/: elm-validation.yml  rag-summarization.yml  wer-evaluation.yml
cdr_elmjson_validator/: import_helper.py  modal_app.py  run_validation.py
cdr_elmjson_validator/test_data/: Adult-Weight-Screening-and-Follow-Up-OpenEMR.json  Breast-Cancer-Screening-OpenEMR.json  (+13 more)
medgemma_on_colab/: medgemma_rag.ipynb
openEMR_Data_Extraction/: Latest_Encounter.py  Table_Exploration.py  patient_5555_full.txt  retrieve.py  retrieve_5555.py  table_attributes_samples.txt  table_column.py
openemr_whisper_wer/: .gitignore  README.md  batch_ww_base.py  batch_ww_tiny.py  calculate_wer.py  canary_wer.py  granite_wer.py  kaggle_dataset.py  mean_wer.py  parakeet_wer.py  phi4_wer.py  preformat.py  preformat1.py  preformat_w_edge.py  requirements.txt  wer_edge_kaggle.py  wer_utils.py  whisper_edge_wer_map.py  whisper_wer.py  wlv3t_on_groq.py
pranathi_RAG/: main.py  main_groq.py  requirements.txt
rag_models/RAG_To_See_MedGemma_Performance/: README.md  baseline.py  create_vector_db.py  entity_evaluator_service.py  gpt_120b_modal.py  gpt_oss_20b_modal.py  groq_llama_4_scout_modal.py  indexing.py  indexing_test.py  llama_3_1_8b_modal.py  main.py  main_medgemma_4b_modal.py  medgemma_27b_4bit_modal.py  original.py  prompt.py  prompt_test.py  pyproject.toml  qwen_32b_modal.py  shared_evaluator_service.py  summary_utils.py  test.py  text_evaluator_service.py  vector_db_host.py
rag_models/RAG_To_See_MedGemma_Performance/data/: all_notes_structure.json
(+39 files in other folders)
