[project]
name = "rag-to-see-medgemma-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "nltk>=3.9.2",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.1.1",
]
